[gd_scene load_steps=3 format=3 uid="uid://c1g6qgbieq2g2"]

[ext_resource type="Script" path="res://addons/cardengine/card/abstract_card.gd" id="1"]
[ext_resource type="Script" path="res://addons/cardengine/card/mouse_area.gd" id="2"]

[node name="AbstractCard" type="Node2D"]
script = ExtResource("1")

[node name="AnimContainer" type="Node2D" parent="."]

[node name="Placeholder" type="Node2D" parent="AnimContainer"]

[node name="Front" type="Node2D" parent="AnimContainer"]
visible = false

[node name="Back" type="Node2D" parent="AnimContainer"]
visible = false

[node name="MouseArea" type="TextureButton" parent="AnimContainer"]
script = ExtResource("2")

[node name="TransiMerge" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="EventMerge" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="button_down" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_button_down"]
[connection signal="button_up" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_button_up"]
[connection signal="drag_started" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_drag_started"]
[connection signal="mouse_entered" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_mouse_exited"]
[connection signal="prepare_for_drop" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_prepare_for_drop"]
[connection signal="pressed" from="AnimContainer/MouseArea" to="." method="_on_MouseArea_pressed"]
[connection signal="timeout" from="TransiMerge" to="." method="_on_TransiMerge_timeout"]
[connection signal="timeout" from="EventMerge" to="." method="_on_EventMerge_timeout"]
